# Health-Guardian

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  init_db.sh  main_10.py  main_12.py  main_13.py  main_8.py  pyproject.toml  requirements.txt  健康提醒3.py
app/: main.py  main2.py
app/api/dependencies/: dingtalk_token.py
app/api/endpoints/: Calendar.py  FreeBusy.py  attendance.py  message.py  steps.py  user.py  weather.py
app/api/models/: Calendar.py  FreeBusy.py  attendance.py  message.py  steps.py  user.py  weather.py
app/core/: __init__.py  config.py  database.py  schedule.py
app/dependencies/: __init__.py  dingtalk_token.py  dingtalk_token_old.py
app/jobs/: attendance_job.py  status_job.py
app/logs/: logging_app_config.json
app/models/: deepseek_model_server.py  models.py
app/repository/: action.py  create_MySQL.sql  database.py
app/services/: __init__.py
app/services/amap/: weather_service.py
app/services/dingtalk/: FreeBusy_service.py  attendance_service.py  attendence_service.py  calendar_service.py  get_attendence.py  get_ifFree.py  get_schedule_list.py  get_sport_info.py  get_user_info.py  get_weather.py  message_service.py  send_message.py  steps_service.py  user_service.py
app/services/scheduler/: scheduler_service.py
app/tests/: test_get_attendance.py  test_get_attendence.py  test_get_calendar.py  test_get_ifFree.py  test_get_schedule_list.py  test_get_sport_info.py  test_get_stesps.py  test_get_token.py  test_get_token_old.py  test_get_user_info.py  test_get_weather.py  test_send_message.py
app/utils/: change_time_format.py  find_userId_by_unionid.py
log/: logging_app_config.json
scripts/: start_test.sh
server/: API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  员工健康小助手系统 - 数据库设计文档.md
server/CSharp_Edition/: README.md
server/Go_Edition/: README.md
server/app/: main.py
server/app/api/: deps.py  errors.py  response_models.py
server/app/api/routes/: events.py  health.py
server/app/core/: config.py  logging.py  metrics.py  security.py
server/app/db/: session.py
server/app/db/migrations/: README.md
server/app/models/: __init__.py  event.py
server/app/repositories/: .gitignore  __init__.py  base.py  csharp_bridge.py  event_repo.py  recommendation_repo.py  rule_repo.py
server/app/repositories/RepositoriesCore/: ActivityLogsRepository.cs  ActivityLogsSyncRepository.cs  ColumnDefinition.cs  EmployeesRepository.cs  EmployeesSyncRepository.cs  IRepository.cs  IRepositorySync.cs  PythonUsageExample.md  RecommandationRepository.cs  RecommendationsSyncRepository.cs  RepositoriesCore.csproj  RepositoriesCore.sln  RepositoriesFactory.cs  RepositoriesTypeHelper.cs  RepositoryManagerBase.cs
server/app/repositories/Test/: ActivityLogsPerformanceTests.cs  PerformanceTests.cs  Program.cs  Test.csproj  TestProgram.cs
server/app/repositories/UnitTest/: OrderedIntegrationTests.cs  Test1.cs  TestProgram.cs  UnitTest.csproj  test.runsettings
server/app/scheduler/: __init__.py  jobs.py
server/app/services/: __init__.py  aggregation.py  dingtalk_client.py  recommendations.py
server/app/services/llm/: __init__.py  base.py  openai_client.py  provider_router.py
server/app/services/rules/: __init__.py  engine.py
server/app/utils/: time.py
server/scripts/: gen_fake_events.py
server/tests/integration/: __init__.py
server/tests/unit/: __init__.py  test_api.py  test_rule_condition.py
