[tool.poetry]
name = "health-guardian"
version = "0.1.0"
description = "健康守护者 - 办公健康助手"
authors = ["SHM-white"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
openai = "^1.14.0"
aiohttp = "^3.9.3"
prometheus-fastapi-instrumentator = "^6.1.0"
apscheduler = "^3.10.4"
redis = {extras = ["hiredis"], version = "^5.0.1"}
httpx = "^0.27.0"
pythonnet = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
isort = "^5.12.0"
ruff = "^0.1.7"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
